animation_headers = [
  'dzl-animation.h',
  'dzl-box-theatric.h',
  'dzl-frame-source.h',
]

animation_sources = [
  'dzl-animation.c',
  'dzl-box-theatric.c',
  'dzl-frame-source.c',
]

libdazzle_public_headers += files(animation_headers)
libdazzle_public_sources += files(animation_sources)

install_headers(animation_headers, subdir: join_paths(libdazzle_header_subdir, 'animation'))
