files_headers = [
  'dzl-directory-model.h',
  'dzl-directory-reaper.h',
]

files_sources = [
  'dzl-directory-model.c',
  'dzl-directory-reaper.c',
]

libdazzle_public_headers += files(files_headers)
libdazzle_public_sources += files(files_sources)

install_headers(files_headers, subdir: join_paths(libdazzle_header_subdir, 'files'))
