graphing_headers = [
  'dzl-cpu-graph.h',
  'dzl-cpu-model.h',
  'dzl-graph-column.h',
  'dzl-graph-column-private.h',
  'dzl-graph-line-renderer.h',
  'dzl-graph-model.h',
  'dzl-graph-renderer.h',
  'dzl-graph-view.h',
]

libdazzle_public_headers += files(graphing_headers)

install_headers(graphing_headers, subdir: join_paths(libdazzle_header_subdir, 'graphing'))
