panel_headers = [
  'dzl-dock-bin-edge.h',
  'dzl-dock-bin.h',
  'dzl-dock-item.h',
  'dzl-dock-manager.h',
  'dzl-dock-overlay-edge.h',
  'dzl-dock-overlay.h',
  'dzl-dock-paned.h',
  'dzl-dock-revealer.h',
  'dzl-dock-stack.h',
  'dzl-dock-transient-grab.h',
  'dzl-dock-types.h',
  'dzl-dock-widget.h',
  'dzl-dock-window.h',
  'dzl-dock.h',
  'dzl-tab-strip.h',
  'dzl-tab.h',
]

libdazzle_public_headers += files(panel_headers)

install_headers(panel_headers, subdir: join_paths(libdazzle_header_subdir, 'panel'))
