search_headers = [
  'dzl-fuzzy-index-builder.h',
  'dzl-fuzzy-index-cursor.h',
  'dzl-fuzzy-index.h',
  'dzl-fuzzy-index-match.h',
  'dzl-fuzzy-index-private.h',
  'dzl-fuzzy-mutable-index.h',
  'dzl-levenshtein.h',
  'dzl-pattern-spec.h',
  'dzl-trie.h',
]

libdazzle_public_headers += files(search_headers)

install_headers(search_headers, subdir: join_paths(libdazzle_header_subdir, 'search'))
