settings_headers = [
  'dzl-settings-sandwich.h',
]

settings_sources = [
  'dzl-settings-sandwich.c',
]

libdazzle_public_headers += files(settings_headers)
libdazzle_public_sources += files(settings_sources)

install_headers(settings_headers, subdir: join_paths(libdazzle_header_subdir, 'settings'))
