shortcuts_headers = [
  'dzl-shortcut-accel-dialog.h',
  'dzl-shortcut-chord.h',
  'dzl-shortcut-context.h',
  'dzl-shortcut-controller.h',
  'dzl-shortcut-label.h',
  'dzl-shortcut-manager.h',
  'dzl-shortcut-model.h',
  'dzl-shortcut-theme-editor.h',
  'dzl-shortcut-theme.h',
  'dzl-shortcuts-group.h',
  'dzl-shortcuts-section.h',
  'dzl-shortcuts-shortcut.h',
  'dzl-shortcuts-window.h',
]

libdazzle_public_headers += files(shortcuts_headers)

install_headers(shortcuts_headers, subdir: join_paths(libdazzle_header_subdir, 'shortcuts'))
