theming_headers = [
  'dzl-css-provider.h',
  'dzl-theme-manager.h',
]

theming_sources = [
  'dzl-css-provider.c',
  'dzl-theme-manager.c',
]

libdazzle_public_headers += files(theming_headers)
libdazzle_public_sources += files(theming_sources)

install_headers(theming_headers, subdir: join_paths(libdazzle_header_subdir, 'theming'))
