widgets_headers = [
  'dzl-bin.h',
  'dzl-bolding-label.h',
  'dzl-box.h',
  'dzl-centering-bin.h',
  'dzl-column-layout.h',
  'dzl-counters-window.h',
  'dzl-elastic-bin.h',
  'dzl-empty-state.h',
  'dzl-entry-box.h',
  'dzl-file-chooser-entry.h',
  'dzl-list-box.h',
  'dzl-list-box-row.h',
  'dzl-multi-paned.h',
  'dzl-pill-box.h',
  'dzl-priority-box.h',
  'dzl-progress-button.h',
  'dzl-progress-menu-button.h',
  'dzl-progress-icon.h',
  'dzl-radio-box.h',
  'dzl-scrolled-window.h',
  'dzl-search-bar.h',
  'dzl-simple-label.h',
  'dzl-simple-popover.h',
  'dzl-slider.h',
  'dzl-stack-list.h',
  'dzl-three-grid.h',
]

libdazzle_public_headers += files(widgets_headers)

install_headers(widgets_headers, subdir: join_paths(libdazzle_header_subdir, 'widgets'))
